--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -55,21 +55,21 @@
   title =        {Single-Precision Floating Point Format},
   subtitle =     {Precision limits on integer values},
   date =         {2017-11-28},
-  url =          {https://en.wikipedia.org/wiki/Single-precision_floating-point_format#Precision_limits_on_integer_values},
-  organization = {The Wikimedia Project},
+  url =          {https://en.wikipedia.org/wiki/Single-precision\_floating-point\_format\#Precision\_limits\_on\_integer\_values},
+  organization = {Wikimedia Foundation, Inc.},
   urldate =      {2017-11-30}
 }
 
-@Online{MKLcblas_sgemm,
-  title = 	 {cblas_?gemm},
+@Online{MKLcblassgemm,
+  title = 	 {cblas\_?gemm},
   url = 	 {https://software.intel.com/en-us/mkl-developer-reference-c-cblas-gemm},
   organization = {Intel Corporation},
   urldate = 	 {2017-12-02}
 }
 
-@Online{MKLcblas_sgemmx,
-  title = 	 {cblas_sgemmx.c},
-  url = 	 {https://software.intel.com/en-us/mkl-developer-reference-c-cblas_sgemmx},
+@Online{MKLcblassgemmx,
+  title = 	 {cblas\_sgemmx.c},
+  url = 	 {https://software.intel.com/en-us/mkl-developer-reference-c-cblas\_sgemmx},
   organization = {Intel Corporation},
   urldate = 	 {2017-12-02}
 }
@@ -140,7 +140,7 @@
 @Online{WikiBeamer,
   title = 	 {Beamer (LaTeX)},
   date = 	 {2017-11-23},
-  url = 	 {https://en.wikipedia.org/wiki/Beamer_(LaTeX)},
+  url = 	 {https://en.wikipedia.org/wiki/Beamer\_(LaTeX)},
   organization = {Wikimedia Foundation, Inc.},
   urldate = 	 {2017-12-07}
 }
@@ -157,7 +157,7 @@
   author = 	 {Wolfe, Michael},
   title = 	 {OpenACC 2.0 and the PGI Accelerator Compiler},
   date = 	 {2013-03-20},
-  url = 	 {http://on-demand.gputechconf.com/gtc/2013/presentations/S3447-OpenACC-2%20-PGI-Accelerator-Compilers.pdf},
+  url = 	 {http://on-demand.gputechconf.com/gtc/2013/presentations/S3447-OpenACC-2\%20-PGI-Accelerator-Compilers.pdf},
   urldate = 	 {2017-12-09},
 }
 
@@ -169,3 +169,132 @@
   urldate = 	 {2017-12-12}
 }
 
+@Misc{Lecture10Slides,
+  author = 	 {Johnsson, Lennart},
+  title = 	 {Introduction to HPC Lecture 10},
+  subtitle =     {Performance and Parallel Computing Concepts},
+  date = 	 {2017-08-24},
+  howpublished = {Blackboard},
+  type = 	 {Lecture Slides},
+  organization = {Department of Computer Science, University of Houston}
+}
+
+@Online{WikiCannonAlgo,
+  title = 	 {Cannon's Algorithm},
+  date = 	 {2017-11-28},
+  url = 	 {https://en.wikipedia.org/wiki/Cannon\%27s\_algorithm},
+  organization = {Wikimedia Foundation, Inc.},
+  urldate = 	 {2017-11-30},
+}
+
+@Online{MintedManual,
+  author = 	 {Poore, Geoffrey M.},
+  title = 	 {The minted package},
+  date = 	 {2017-07-19},
+  url = 	 {http://mirrors.ctan.org/macros/latex/contrib/minted/minted.pdf},
+  subtitle =     {Highlighted source code in LATEX}
+}
+
+@Online{latexliststructures,
+  title = 	 {LaTeX/List Structures},
+  date = 	 {2017-10-04},
+  url = 	 {https://en.wikibooks.org/wiki/LaTeX/List\_Structures},
+  organization = {The Wikimedia Project}
+}
+
+@Online{latexheaders,
+  title = 	 {LaTeX/Customizing Page Headers and Footers},
+  date = 	 {2017-10-04},
+  url = 	 {https://en.wikibooks.org/wiki/LaTeX/Customizing\_Page\_Headers\_and\_Footers},
+  organization = {The Wikimedia Project}
+}
+
+@Online{latexmathematics,
+  title = 	 {LaTeX/Mathematics},
+  date = 	 {2017-10-04},
+  url = 	 {https://en.wikibooks.org/wiki/LaTeX/Mathematics},
+  organization = {The Wikimedia Project}
+}
+
+@Online{UsingBibTex,
+  author = 	 {Feder, Alexander},
+  title = 	 {How to use BibTeX},
+  date = 	 {2006},
+  url = 	 {http://www.bibtex.org/Using/},
+  urldate = 	 {2017-10-14}
+}
+
+@Online{BibTexFormat,
+  author = 	 {Feder, Alexander},
+  title = 	 {BibTex Format Description},
+  date = 	 {2006},
+  url = 	 {http://www.bibtex.org/Format/},
+  urldate = 	 {2017-10-14}
+}
+
+@Online{BiblatexManual,
+  author = 	 {Lehman, Philip and Kime, Philip and Boruvka, Audrey and Wright, Joseph},
+  title = 	 {The biblatex Package},
+  date = 	 {2016-11-16},
+  url = 	 {http://mirrors.ctan.org/macros/latex/contrib/biblatex/doc/biblatex.pdf}
+}
+
+@Online{BiberManual,
+  author = 	 {Kime, Philip and François Charette},
+  title = 	 {biber},
+  date = 	 {2016-12-05},
+  url = 	 {http://mirrors.ctan.org/biblio/biber/documentation/biber.pdf},
+  subtitle =     {A backend bibliography processor for biblatex}
+}
+
+@Online{latexusrguide,
+  title = 	 {LATEX 2ε for authors},
+  date = 	 {2001-07-31},
+  url = 	 {http://www.latex-project.org/help/documentation/usrguide.pdf},
+  organization = {LATEX3 Project Team}
+}
+
+@Online{LibreOffice,
+  title = 	 {LibreOffice},
+  year = 	 {2017},
+  url = 	 {http://www.libreoffice.org/},
+  organization = {The Document Foundation}
+}
+
+@Online{PgfplotstableManual,
+  author = 	 {Feuersänger, Christian},
+  title = 	 {Manual for Package PgfplotsTable},
+  date = 	 {2017-06-05},
+  url = 	 {http://mirrors.ctan.org/graphics/pgf/contrib/pgfplots/doc/pgfplotstable.pdf}
+}
+
+@Online{PgfplotsManual,
+  author = 	 {Feuersänger, Christian},
+  title = 	 {Manual for Package Pgfplots},
+  date = 	 {2017-06-05},
+  url = 	 {http://mirrors.ctan.org/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf}
+}
+
+@Online{MPIReport31,
+  title = 	 {MPI: A Message-Passing Interface Standard},
+  date = 	 {2015-06-04},
+  url =          {http://mpi-forum.org/docs/mpi-3.1/mpi31-report.pdf},
+  version = 	 {3.1},
+  organization = {Message Passing Interface Forum}
+}
+
+@Online{LaTeXEnumerate,
+  author = 	 {Carlisle, David},
+  title = 	 {The enumerate package},
+  date = 	 {2015-07-23},
+  url = 	 {http://mirrors.ctan.org/macros/latex/required/tools/enumerate.pdf},
+  urldate = 	 {2017-11-23}
+}
+
+@Online{openmp45spec,
+  title = 	 {OpenMP Application Programming Interface},
+  date = 	 {2015-11},
+  url = 	 {http://www.openmp.org/wp-content/uploads/openmp-4.5.pdf},
+  organization = {OpenMP Architecture Review Board},
+  version = 	 {4.5}
+}
